JAVADOC. Renamed various fields "op" to "operator", because "op" is ambiguous.